<resources>
    <string name="app_name">Ubudu IL</string>
    <string name="button_yes">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="radar">Radar</string>
    <string name="choose_namespace_input_type">Setup application</string>
    <string name="input_type_namespace_hint">Set namespace</string>
    <string name="input_type_real_time_tracking_url_hint">Set real-time position tracking url</string>
    <string name="input_prefill"></string>

    <string name="title_general_settings">General</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_il_settings">Indoor Location</string>
    <string name="title_map_settings">Map</string>

    <string name="title_log_position_real_time">Real-time tracking</string>
    <string name="summary_log_position_real_time">Toggles real-time position tracking</string>

    <string name="title_log_position_real_time_url">Tracking URL</string>
    <string name="summary_log_position_real_time_url">URL to which the real-time position logs are posted</string>

    <string name="summary_change_application">This option allows to switch to different application</string>
    <string name="summary_report_battery_levels">Toggle posting beacons battery level to Ubudu server</string>
    <string name="title_report_battery_levels">Beacon battery monitoring</string>
    <string name="title_change_application">Switch application</string>

    <string name="title_log_position_history">Log position history</string>
    <string name="summary_log_position_history">Toggle posting position history logs to Ubudu server for analytics</string>

    <string name="permissions">Permissions</string>

    <string name="summary_geoloc_permission">Toggle location services</string>
    <string name="title_geoloc_permission">Geolocation</string>
    <string name="title_app_infos">App Info</string>
    <string name="title_app_version">App version</string>
    <string name="title_indoorlocation_sdk_version">IL SDK version</string>

    <string name="title_undetected_beacons">Show undetected beacons</string>
    <string name="summary_undetected_beacons">Always show all beacons of the current map</string>
    <string name="map_settings">Map settings</string>

    <string name="summary_transition_zones_floor_switching">When checked the floor can be switched to another only if position is within a special zone with a tag \"transition\". Such zones can be defined for each map on the Manager website.</string>
    <string name="title_transition_zones_floor_switching">Transition zones</string>

    <string name="summary_background_scanning">Check to keep foreground Bluetooth scanning frequency when app is in the background</string>
    <string name="title_background_scanning">Background scanning</string>

    <string name="beacon_details_title">Beacon details</string>

    <string name="signup_title">Create new account</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_account_authenticator">Authentication activity</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="summary_account_details"></string>
    <string name="title_account_details">Account</string>

    <string name="title_logout">Sign out</string>

    <string name="summary_applications_list">Fetch and display list of available applications</string>
    <string name="title_applications_list">Applications</string>

    <string name="summary_operation_mode">STABLE: good for open spaces \n BLE corrective: good for areas with high beacons density \n ATTRACTOR: gluing to strongest beacon position</string>
    <string name="title_operation_mode">Mode of operation</string>
    <string name="mode">Holding mode: </string>
    <string name="numsteps">Steps count: </string>
    <string name="orientation">Earth reference frame orientation: </string>
    <string name="steplength">Step length: </string>

    <string name="summary_show_particles">Show particles to validate behaviour of particle filtering</string>
    <string name="title_show_particles">Show particles</string>
    <string name="speed">Speed:</string>
    <string name="user_height">User height:</string>
    <string name="loading">Loading ...</string>
    <string name="user_gender">Gender:</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <string name="summary_detected_beacons">Toggle displaying detected beacons on the map layout</string>
    <string name="title_detected_beacons">Display beacons</string>
    <string name="speed_coefficient">Speed coefficient</string>
    <string name="static_coefficient">Static coefficient</string>

    <string name="uart">uart</string>
    <string name="scan"></string>
    <string name="name_mac_filter">name/mac filter</string>
    <string name="rssi_filter">RSSI filter</string>
    <string name="scanned_devices">Devices nearby:</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting ...</string>
    <string name="twr_interval_label">TWR interval</string>

    <string name="title_use_gps_provider">Use GPS</string>
    <string name="summary_use_gps_provider">Toggle GPS assistance</string>
    <string name="twr_distance_smoothing">Distance avg coeff</string>


</resources>
