<LinearLayout android:orientation="vertical"
    android:id="@+id/user_calibration_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/user_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_height"/>

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/height_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dsb_indicatorColor="@color/colorAccent"
        app:dsb_progressColor="@color/colorAccent"
        app:dsb_min="0"
        app:dsb_max="100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_gender"/>

        <RadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </LinearLayout>

</LinearLayout>