<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/holding_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mode" />

        <TextView
            android:id="@+id/mode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/orientation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/orientation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation" />

        <TextView
            android:id="@+id/orientation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[0, 0, 0]"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/compass"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/compass" />

    <HorizontalScrollView
        android:id="@+id/step_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/numsteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/numsteps" />

            <TextView
                android:id="@+id/numsteps_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="-"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/step_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/steplength" />

            <TextView
                android:id="@+id/step_length_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="-"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/speed_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textStyle="bold" />

        </LinearLayout>

    </HorizontalScrollView>

    <com.ubudu.ilapp2.view.UserHeightAndGenderConfigurationView
        android:id="@+id/user_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />


</LinearLayout>