<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" >

    <LinearLayout
        android:id="@+id/name_mac_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_mac_filter_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_mac_filter" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rssi_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rssi_filter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/rssi_filter_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                app:dsb_indicatorColor="@color/colorAccent"
                app:dsb_max="100"
                app:dsb_min="0"
                app:dsb_progressColor="@color/colorAccent" />

            <TextView
                android:id="@+id/filter_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanned_devices" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scanning_animation_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:visibility="gone">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/scanning_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="BallPulseIndicator" />

        </LinearLayout>


        <ListView
            android:id="@+id/scanned_devices_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="4dip"
            android:layout_marginEnd="8dip"
            android:layout_marginStart="8dip"
            android:layout_marginTop="10dip"
            android:divider="@color/colorDivider"
            android:dividerHeight="1sp"
            android:scrollbars="vertical"
            android:stackFromBottom="false"
            android:transcriptMode="disabled" />
    </RelativeLayout>

</LinearLayout>